<resources>
    <string name="app_name">Biblioflex Application</string>
    <string name="logar">Logar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="senha">Senha:</string>
    <string name="digite_seu_login">Digite seu Email</string>
    <string name="login">Email:</string>
    <string name="bem_vindo_ao_biblioflex">Bem-vindo ao Biblioflex</string>
    <string name="icon">ICON</string>
    <string name="bem_vindo_ao_cadastro">Bem-vindo ao Cadastro</string>
    <string name="co_senha">Co-Senha:</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_do_livro">Nome do livro</string>
    <string name="autor">Autor :</string>
    <string name="g_nero">Gênero :</string>
    <string name="ano_de_publica_o">Ano de publicação :</string>
    <string name="progresso">Progresso :</string>
    <string name="avalia_o">Avaliação :</string>
    <string name="status">Status:</string>
    <string name="novo_livro">NOVO LIVRO</string>
    <string name="nome">Nome:</string>
    <string name="autor_livro">Autor:</string>
    <string name="g_nero_livro">Gênero:</string>
    <string name="data_de_publica_o">Data de publicação:</string>
    <string name="lido">Lido</string>
    <string name="lendo">Lendo</string>
    <string name="desejo_ler">Desejo ler</string>
    <string name="adicionar">Adicionar</string>
    <string name="opcional">Opcional</string>
    <string name="op_es">Opções</string>
    <string name="action_sair">Sair</string>
    <string name="avalie_de_0_a_9">Avalie de 0 a 9</string>
    <string name="avalia_o_cadastro">Avaliação :</string>
    <string name="pagina_atual">Pagina atual :</string>
    <string name="pagina_total">Pagina total :</string>
    <string name="comentario">Comentario</string>
    <string name="voltar">Voltar</string>
    <string name="atualizar">Atualizar</string>
    <string name="todos_livros">Todos Livros</string>
    <string name="livros_bons">Livros bons</string>
    <string name="livros_medianos">Livros medianos</string>
    <string name="livros_ruins">Livros ruins</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="data_do_inicio_da_leitura">Data do inicio da leitura :</string>
    <string name="data_da_finaliza_o_da_leitura">Data da finalização da leitura :</string>

</resources>
