<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.vinic.biblioflexapplication.CadastroActivity">

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo_ao_cadastro"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:layout_marginStart="5dp" />

        <EditText
            android:maxLength="30"
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_seu_login"
            android:layout_marginStart="5dp"
            android:inputType="textWebEmailAddress"/>

        <TextView
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"/>

        <EditText
            android:maxLength="30"
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_sua_senha"
            android:layout_marginStart="5dp"
            android:inputType="textPassword"/>

        <TextView
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/co_senha"/>

        <EditText
            android:maxLength="30"
            android:id="@+id/edit_co-senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirme_sua_senha"
            android:layout_marginStart="5dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:background="@color/colorPrimaryDark"
            android:onClick="cadastrar"/>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:background="@color/colorAccent"
            android:onClick="cancelar"/>
    </LinearLayout>
</ScrollView>