<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context="com.example.vinic.biblioflexapplication.LivroActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar_livro"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_nome_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_livro"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_autor"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor_livro"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_genero"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_nero_livro"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_data"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_publica_o"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_avaliacao"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avalia_o_cadastro"/>

        <RatingBar
            android:isIndicator="true"
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
            android:focusable="true" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_status"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_progressao"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progresso"/>

        <ProgressBar
            android:id="@+id/progress_progresso"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="360dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_data_ini"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_do_inicio_da_leitura"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_data_fim"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_da_finaliza_o_da_leitura"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_pagina_atual"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagina_atual"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/text_pagina_total"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagina_total"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_comentario"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:paddingBottom="110dp"/>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:background="@color/colorAccent"
            android:onClick="voltar"/>



    </LinearLayout>
</ScrollView>