<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.vinic.biblioflexapplication.CadastroLivroActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_livro"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"/>

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor_livro"/>

        <EditText
            android:id="@+id/edit_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_nero_livro"/>

        <EditText
            android:id="@+id/edit_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_publica_o"/>

        <EditText
            android:id="@+id/edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="date"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avalia_o_cadastro"/>

        <RatingBar
            android:isIndicator="false"
            android:clickable="true"
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_lido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lido"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_lendo"
                    android:layout_marginStart="80dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lendo"/>

                <RadioButton
                    android:id="@+id/radio_desejo_ler"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desejo_ler"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:background="@color/colorPrimaryDark"
            android:onClick="adicionar"
            />

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:background="@color/colorAccent"
            android:onClick="cancelar"/>




    </LinearLayout>
</ScrollView>