<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.vinic.biblioflexapplication.LivroActivity">

        <EditText
            android:id="@+id/edit_nome_livro"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor_livro"
            android:textSize="10sp"/>

        <EditText
            android:id="@+id/edit_autor"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:inputType="text"/>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_nero_livro"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_genero"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_publica_o"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_data"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avalia_o_cadastro"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <RadioGroup
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_lido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lido"/>

            <RadioButton
                android:id="@+id/radio_lendo"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lendo"/>

            <RadioButton
                android:id="@+id/radio_desejo_ler"
                android:layout_marginStart="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desejo_ler"/>

        </RadioGroup>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_do_inicio_da_leitura"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_data_inicio"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_da_finaliza_o_da_leitura"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_data_final"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagina_atual"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_pagina_atual"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagina_total"/>

        <EditText
            android:textSize="10sp"
            android:id="@+id/edit_pagina_total"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/comentario"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/comentario"
            android:inputType="text"
            android:paddingBottom="20dp" />

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/atualizar"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/button_atualizar"/>




    </LinearLayout>
</ScrollView>