<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    card_view:cardBackgroundColor="#E6E6E6"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp"
    android:scrollbarStyle="insideInset"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nome_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_livro"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/livro_cardview"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_autor"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autor"/>

                <TextView
                    android:id="@+id/text_genero"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g_nero"/>

                <TextView
                    android:id="@+id/text_ano_p"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ano_de_publica_o"/>

                <TextView
                    android:id="@+id/text_status"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>

                <RatingBar
                    android:layout_marginStart="10dp"
                    android:id="@+id/rating_bar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.5" />

                <ProgressBar
                    android:id="@+id/progress_progresso"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false" />


            </LinearLayout>




        </LinearLayout>






    </LinearLayout>


</android.support.v7.widget.CardView>